# django-cache-decorator

./: README.md  pyproject.toml  setup.py
django_cache_decorator/: __init__.py  utils.py
src/django_cache_decorator/: __about__.py  __init__.py  utils.py
