[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django3-cache-decorator"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Xiang Wang", email = "ramwin@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Xiang Wang/django3-cache-decorator#readme"
Issues = "https://github.com/Xiang Wang/django3-cache-decorator/issues"
Source = "https://github.com/Xiang Wang/django3-cache-decorator"

[tool.hatch.version]
path = "src/django_cache_decorator/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/django_cache_decorator tests}"

[tool.coverage.run]
source_pkgs = ["django_cache_decorator", "tests"]
branch = true
parallel = true
omit = [
  "src/django_cache_decorator/__about__.py",
]

[tool.coverage.paths]
django_cache_decorator = ["src/django_cache_decorator", "*/django-cache-decorator/src/django_cache_decorator"]
tests = ["tests", "*/django-cache-decorator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_cache_decorator"]
exclude = [
]

[tool.setuptools.package-data]
django3-cache-decorator = ["src/django_cache_decorator/py.typed"]
